            JSON.stringify now checks for potential stack overflow when stringifying (fix #1940)
            Check for Stack overflow when Garbage Collecting giant linked list (fix #1765)
            Added String.padStart/padEnd
            Fix issue where JSON.stringify({ something: bool }) would output 'something' as a bool too

     2v07 : Graphics.asImage() now contains buffer when bpp != 8 (fix #1863)
            nRF52 SDK15: Fix NRF.setScan/findDevices/etc
            nRF52: reduce input buffer space taken by advertising packets
            Pretokenisation: reserved words can now be used as function names (fix #1868)
            jslGetNextToken now avoids iterator clone for each token (fix #1857)
            nRF52: fix instability when accessing ADC from IRQs and event loop at the same time (fix #1861)
            Fix 0.0==null comparison (fix #1865)
            WIZNet: add setHostname(), geHostname(), getStatus()
            Fix XON not sent after reset() (fix #1872)
            Remove USBSERIAL enum for non-USB devices
            Shrink new vector font sizes to allow multi-line use (fix #1873)
            Stop Object.setPrototypeOf overwriting Object.prototype sometimes (fix #1875)
            Arrow functions now always overwrite `this` (fix #1878)
            Implement Streaming Storage compaction to allow compact with less RAM (fix #1598,#1707,#1828)
            jslTokenAsString now works for 'of'
            Speed up Array.prototype.join (fix #1660)
            Allow 'in' to be used with typed arrays (fix #1534)
            Fix global regex issues when match may be 0 chars (fix #1888) (fix #1889)
            Improve String.replace performance using iterator rather than repeated copy
            Pixl.js: SDA/SCL constants should point to A4/A5, not D4/D5
            Fix Graphics.fill/drawCircle lock leak
            Fix issue when do..while loop condition has side effects
            Bangle.js: Ensure SPI flash CS is disabled when sleeping/off